--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,6 +10,11 @@
             android:id="@+id/calendar_view"
             android:icon="@drawable/ic_date_range_black_24dp"
             android:title="Calendar view" />
+
+        <item
+            android:id="@+id/all_events"
+            android:icon="@drawable/ic_assignment_black_24dp"
+            android:title="All events" />
     </group>
 
 </menu>
